# Fast3DScattering-release

./: README.md  environment.yml
dnn/: module.py  moduleConfig.py  split.py  test_meshio.py  tf_util.py  train.py  util.py
mesh_processing/: CMakeLists.txt  batch_cluster_obj.sh  batch_rotate_obj.sh  batch_sample_obj.sh  farthest_sampling.cpp  keyframe_obj_export.py  random_rotation.cpp  scale_rot_clustering.cpp  trimesh_clustering.cpp
simulation/: countValidResults.m  generateBEMInputs.m  generateBEMModelDirSource.m  input.fmm  read_wobj.m  read_wobj_BEM.m  runBEMscripts.m  simFrequency.m  simSchedule.m  write_obj.m
utils/: data_extraction.py  fileio.py  sphmath.py
